--- a/.github/workflows/master_girofit-api.yml
+++ b/.github/workflows/master_girofit-api.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet build --configuration Release
 
     - name: dotnet publish
-      run: dotnet publish -c Release -o /src/WebApi/WebApi.csproj
+      run: dotnet publish -c Release -o /src/WebApi
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
