--- a/.github/workflows/master_girofit-api.yml
+++ b/.github/workflows/master_girofit-api.yml
@@ -25,7 +25,7 @@ jobs:
       run: dotnet build --configuration Release
 
     - name: dotnet publish
-      run: dotnet publish -c Release -o /src/WebApi
+      run: dotnet publish -c Release -o ${{env.DOTNET_ROOT}}/WebApi.csproj
 
     - name: Deploy to Azure Web App
       uses: azure/webapps-deploy@v2
@@ -33,4 +33,4 @@ jobs:
         app-name: 'girofit-api'
         slot-name: 'production'
         publish-profile: ${{ secrets.AzureAppService_PublishProfile_c0e67a810d8441289611cdb5a721bb31 }}
-        package: ${{env.DOTNET_ROOT}}/myapp 
+        package: ${{env.DOTNET_ROOT}}/WebApi.csproj 
